--- a/login.css
+++ b/login.css
@@ -1,127 +1,164 @@
-*{
-    margin: 0;
-    padding:0;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-section{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    width: 100%;
+body {
+    overflow: hidden;
     background-image: url(nature.jpeg);
     background-size: cover;
     background-position: center;
 }
 
-.form-box{
-    position: relative;
+.navbar {
+  background-color: transparent;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.nav-list {
+  list-style-type: none;
+  margin: 20px;
+  padding: 0;
+}
+
+.nav-list li {
+  display: inline-block;
+}
+
+.nav-list li a {
+    font-size: larger;
+    text-decoration:none;
+    color:#000000;
+}
+
+.nav-list li:not(:last-child) {
+    margin-right: 20px;
+  }
+  
+  .nav-list li:hover {
+    transform: scale(1.1);
+  }
+  
+  .navbar:hover {
+    background-color:transparent
+  }
+
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  width: 100%;
+}
+
+.form-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 400px;
     height: 450px;
     background: transparent;
-    border: 3px solid rgba(255,255,255,0.5);
+    border: 3px solid rgba(255, 255, 255, 0.567);
     border-radius: 30px;
-    backdrop-filter: blur(20px);
+    backdrop-filter: blur(30px);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-h2{
-    font-size: 2em;
-    color: white;
-    text-align: center;
+h2 {
+  font-size: 2em;
+  color: rgba(0, 0, 0, 0.838);
+  text-align: center;
 }
 
-.inputbox{
-    position: relative;
-    margin: 30px 0;
-    width: 310px;    
-    border-bottom: 2px solid #fff;
+.inputbox {
+  position: relative;
+  margin: 30px 0;
+  width: 310px;
+  border-bottom: 2px solid #fff;
 }
 
-.inputbox label{
-    position: absolute;
-    top: 50%;
-    left: 5px;
-    transform: translateY(-50%);
-    color: white;
-    font-size: 1em;
-    pointer-events: none;
-    transition: 0.25s;
+.inputbox label {
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
+  color: white;
+  font-size: 1em;
+  pointer-events: none;
+  transition: 0.25s;
 }
 
 input:focus ~ label,
-input:valid ~ label{
-    top: -5px;
+input:valid ~ label {
+  top: -5px;
 }
 
-.inputbox input{
-    width: 100%;
-    height: 50px;
-    background: transparent;
-    border: none;
-    outline: none;
-    font-size: 1em;
-    padding: 0 35px 0 5px;
-    color: #fff;
+.inputbox input {
+  width: 100%;
+  height: 50px;
+  background: transparent;
+  border: none;
+  outline: none;
+  font-size: 1em;
+  padding: 0 35px 0 5px;
+  color: #fff;
 }
 
-.inputbox ion-icon{
-    position: absolute;
-    right: 8px;
-    color: #fff;
-    font-size: 1.2em;
-    top: 20px;
+.inputbox ion-icon {
+  position: absolute;
+  right: 8px;
+  color: #fff;
+  font-size: 1.2em;
+  top: 20px;
 }
 
-.forget{
-    margin: -15px 0 15px;
-    font-size: .9em;
-    color: #ffffff;
-    display: flex;
-    justify-content: center;
+.forget {
+  margin: -15px 0 15px;
+  font-size: 0.9em;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
 }
 
-.forget label input{
-    margin-right: 3px;
+.forget label input {
+  margin-right: 3px;
 }
 
-.forget label a{
-    color: #fff;
-    text-decoration: none;
+.forget label a {
+  color: #fff;
+  text-decoration: none;
 }
 
-.forget label a:hover{
-    text-decoration: underline;
+.forget label a:hover {
+  text-decoration: underline;
 }
 
-button{
-    width: 100%;
-    height: 40px;
-    border-radius: 40px;
-    background: #fff;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    font-size: 1em;
-    font-weight: 700;
-
+button {
+  width: 100%;
+  height: 40px;
+  border-radius: 40px;
+  background: rgb(66, 203, 66);
+  border: 2;
+  outline: none;
+  cursor: pointer;
+  font-size: 1em;
+  font-weight: 700;
 }
 
-.register{
-    font-size: .9em;
-    color: #fff;
-    text-align: center;
-    margin: 25px 0 10px;
+.register {
+  font-size: 0.9em;
+  color: #fff;
+  text-align: center;
+  margin: 25px 0 10px;
 }
 
-.register p a:hover{
-    text-decoration: underline;
+.register p a:hover {
+  text-decoration: underline;
 }
-
-
-
-
-
