--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ section p {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 35px;
+    padding: 20px;
     color: green;
     font-weight: 600;
 }
@@ -92,7 +92,7 @@ section p {
 }
 
 .nav-item:hover {
-    color: #949494;
+    transform: scale(1.1);
 }
 
 .menu-btn {
@@ -100,8 +100,8 @@ section p {
     top: 24px;
     right: 24px;
 
-    width: 68px;
-    height: 68px;
+    width: 55px;
+    height: 55px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -129,7 +129,7 @@ section p {
     padding: 20vh 11vw 8vh 11vw;
     display: flex;
     flex-direction: column;
-    font-size: 48px;
+    font-size: 30px;
     transform: translateX(100%);
     z-index: 2;
     
