--- a/style.css
+++ b/style.css
@@ -1,249 +1,79 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@400;600;700&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
+
+    margin: 0%;
+    padding: 0%;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    background-color: #ffffffdc;
+
+
 }
 
-body {
-    font-family: Inter;
-    color: black;
+.Madhya-pradesh img {
+    width: 1100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 470px;
 }
 
-::-webkit-scrollbar {
-    display: none;
+h1 {
+    color: rgb(32, 46, 125);
 }
 
-button {
-    border: 0;
-    outline: none;
-    background: none;
-    color: inherit;
+h2 {
+    color: rgb(125, 37, 32);
 }
 
-a {
-    text-decoration: none;
-    color: inherit;
+h3 {
+    color: rgb(32, 125, 49);
 }
 
-.container {
+h4 {
+    color: rgb(32, 46, 125);
+}
+
+p {
+    color: blueviolet;
+}
+
+
+.photo-upload {
+    width: 100vw;
     height: 100vh;
     display: flex;
-    flex-direction: column;
-    background-image: url(images/image.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    animation: change 30s infinite ease-in-out;
-}
-
-.landing {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
     justify-content: center;
     align-items: center;
-}
-
-section h1 {
-    color: black;
-    font-size: 64px;
-    font-weight: 700;
-}
-
-section p {
-    font-size: 18px;
-    color: black;
-}
-
-.section {
-    height: 100vh;
-    display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: green;
 }
 
-.section h1 {
-    font-weight: 600;
+.display {
+    border: 2px solid black;
+    width: 200px;
+    height: 200px;
+    margin: 20px;
+    overflow: hidden;
 }
 
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    color: green;
-    font-weight: 600;
-}
-
-.navbar .nav-logo {
-    font-size: 22px;
-    color: green;
-}
-
-.nav-items {
-    display: flex;
-    gap: 40px;
-}
-
-.nav-item:hover {
-    transform: scale(1.1);
-}
-
-/* Style for the dropdown menus */
-.sub-menu {
+#upload {
     display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    list-style-type: none;
-    padding: 0;
 }
 
-.sub-item {
-    position: relative;
-    width: max-content;
-}
-
-.nav-item:hover .sub-menu {
-    display:block;
-}
-
-.sub-menu li {
-    padding: 10px 20px;
-}
-
-.sub-menu li:hover {
-    background-color: #f9f9f9;
-}
-
-/* Style for sub-dropdowns */
-.sub-sub-menu {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 100%;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    list-style-type: none;
-    padding: 0;
-}
-
-.sub-sub-item {
-    position: relative;
-    width: max-content;
-}
-
-.sub-menu li.sub-item:hover .sub-sub-menu {
-    display: block;
-}
-
-.sub-sub-menu li {
-    padding: 10px 20px;
-}
-
-.sub-sub-menu li:hover {
-    background-color: #f9f9f9;
-}
-
-
-.menu-btn {
-    position: fixed;
-    top: 24px;
-    right: 24px;
-
-    width: 55px;
-    height: 55px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #191b1d;
-    border-radius: 50%;
-    color: white;
+label {
+    background: rgb(56, 255, 53);
     cursor: pointer;
-    scale: 0;
-    transition: background-color 0.3s ease;
-    z-index: 3;
-
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 18px;
+    text-transform: capitalize;
 }
 
-.menu-btn i {
-    font-size: 24px;
-}
-
-.menu {
-    position: fixed;
-    top: 0;
-    right: 0;
-    height: 100vh;
-    background-color: #1c1d20;
-    color: white;
-    padding: 20vh 11vw 8vh 11vw;
-    display: flex;
-    flex-direction: column;
-    font-size: 30px;
-    transform: translateX(100%);
-    z-index: 2;
-    
-}
-
-.menu-header {
-    font-size: 12px;
-    color: #7f7f81;
-    padding: 16px 0;
-    border-bottom: 1px solid #7f7f81;
-    margin-bottom: 56px;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-}
-
-.menu-items {
-    display: flex;
-    flex-direction: column;
-    gap: 28px;
-}
-
-.menu-item {
-    transition: transform 0.3s ease;
-}
-
-.menu-item:hover {
-    transform: translateY(-10px);
-}
-
-.menu.active+.menu-btn {
-    background-color: #455ce9;
-}
-@keyframes change{
-    0%
-    {
-        background-image: url(images/img1.jpg);
-    }
-    20%
-    {
-        background-image: url(images/img2.jpg);
-    }
-    40%
-    {
-        background-image: url(images/image.jpg);
-    }
-    60%
-    {
-        background-image: url(images/img4.jpg);
-    }
-    80%
-    {
-        background-image: url(images/img5.jpg);
-    }
-    100%
-    {
-        background-image: url(images/img1.jpg);
-    }
+/* uploaded image */
+img {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    object-fit: cover;
 }
